# OpenQM

./: .gitignore  CMakeLists.txt  README.md  implicant.cpp  implicant.h  main.cpp  qm.cpp  qm.h  string_implicant.cpp  string_implicant.h  test.py  utils.cpp  utils.h  vector_bool_implicant.cpp  vector_bool_implicant.h
test/: CMakeLists.txt  test_Implicant.cpp  test_expand_parentheses.cpp
